# VIBE-CODING-1

./: .gitignore  README.md  sync.sh
lesson_1/: ASSIGNMENT.md  main.py  pyproject.toml  transcription.md
lesson_5/: .mcp.json  ASSIGNMENT.md  CLAUDE.md  README.md
lesson_5/.claude/: settings.json
lesson_5/.claude/agents/: code-reviewer.md  docs-writer.md  test-writer.md
lesson_5/.claude/skills/commit-message/: SKILL.md
lesson_5/.claude/skills/python-style-guide/: SKILL.md
lesson_5/demo_project/: README.md  orders.py
lesson_5/docs/contributing/: CODE-STYLE-PYTHON.md
lesson_5/mcp_server/: README.md  pyproject.toml  server.py
