[project]
name = "project-insights-mcp"
version = "0.1.0"
description = "Custom MCP server with project-analysis tools for Claude Code."
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
]

[project.scripts]
project-insights-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
